--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/samsungssi/job/ooEEafwA'>Samsung Semiconductor, Inc. Careers - Computer Vision/Deep Learning Software Engineer Intern</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/kingland/job/o52EafwF'>Kingland Systems Careers - HR Recruiting/Event Coordinator Advanced Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -75,7 +79,7 @@
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/samsungresearchamericainternship/jobs/4265390002'>Job Application for Fall 2019 Visual Design Intern - Think Tank Team at Samsung Research America Internship</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamericainternship/jobs/4265390002'>Job Application for Fall 2019 Visual Design Intern - Think Tank Team at Samsung Research America Internship</a></h5> 
 <p><span class="badge badge-light">Mountain View Mountain View, CA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -165,6 +169,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
+<h5><a href='https://anaxee.freshteam.com/jobs/iqcIsGkSZ0FA/data-analyst-data-scientist-internship-tech-savvy'>Data Analyst / Data Scientist | Internship | Tech-Savvy</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Data Analyst / Data Scientist | Internship | Tech-Savvy|. Indore, Madhya Pradesh | 
+Full time. Apply Now. Job role: As a data analyst, you will be responsible for?...</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/kasian/jobs/1789025'>Job Application for Intern Architect at Kasian</a></h5> 
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-28</p>
@@ -203,7 +212,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://schumacher.recruitee.com/o/showroom-intern-summerfall-2019'>
+<h5><a href='https://schumacher.recruitee.com/o/showroom-intern-summerfall-2019'>
       Showroom Intern - Summer/Fall 2019 - F. Schumacher & Co.
     </a></h5> 
 <p><span class="badge badge-light">Boston Boston</span></p>
@@ -230,7 +239,7 @@ at least 85% of coursework towards a college degree, focusing on Graphic?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://noodle.applytojob.com/apply/vReNr9fVFT/Editorial-Intern-Noodlecom'>Editorial Intern | Noodle.com - The Noodle Companies - Career Page</a></h5> 
+<h5><a href='https://noodle.applytojob.com/apply/vReNr9fVFT/Editorial-Intern-Noodlecom'>Editorial Intern | Noodle.com - The Noodle Companies - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... We are applying data science and machine learning to EDU search, helping 
 people select which degree, program, and school is right for them. At Noodle, 
@@ -257,7 +266,7 @@ Canada, Montreal; Head of Engineering and maintenance, Canada, Montreal?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://protix.recruitee.com/o/internship-rd-data-analyst-summer-job'>Internship R&D Data Analyst & summer job - Protix</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://protix.recruitee.com/o/internship-rd-data-analyst-summer-job'>Internship R&D Data Analyst & summer job - Protix</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... We are building a fully automated hightech farm for a totally new industry, insect 
 breeding. Therefore, we are building the technology to understand and optimize
@@ -293,7 +302,7 @@ quality?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/RocketInternet/743999692362349-junior-group-accountant-m-w-d-'>Rocket Internet Junior Group Accountant (m/w/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RocketInternet/743999692362349-junior-group-accountant-m-w-d-'>Rocket Internet Junior Group Accountant (m/w/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -301,7 +310,7 @@ quality?...</p>
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://huttonconstructioncorp.recruitee.com/o/internshipseasonal-craft-labor'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://huttonconstructioncorp.recruitee.com/o/internshipseasonal-craft-labor'>
       *Internship/Seasonal Craft Labor - Hutton Corporation
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -315,7 +324,7 @@ quality?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oy6Dafwb&__jvst=ER+-+Employee+Referral&__jvsd=scEWPgwm&__jvsc=Twitter&bid=nXgXVLwl'>Nutanix Careers - Intern - Systems Engineer - Objects &amp; Calm</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oy6Dafwb&__jvst=ER+-+Employee+Referral&__jvsd=scEWPgwm&__jvsc=Twitter&bid=nXgXVLwl'>Nutanix Careers - Intern - Systems Engineer - Objects &amp; Calm</a></h5> 
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -385,7 +394,7 @@ quality?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://unitednationsfoundation.applytojob.com/apply/hdEgpq1LUO/Intern-UN-Relations-And-Policy-New-York'>Intern, UN Relations and Policy (New York) - United Nations Foundation - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitednationsfoundation.applytojob.com/apply/hdEgpq1LUO/Intern-UN-Relations-And-Policy-New-York'>Intern, UN Relations and Policy (New York) - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -413,7 +422,7 @@ quality?...</p>
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://codal.applytojob.com/apply/ycpxZC/UX-Internship'>UX Internship - Codal - Career Page</a></h5> 
+<h5><a href='http://codal.applytojob.com/apply/ycpxZC/UX-Internship'>UX Internship - Codal - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -441,7 +450,7 @@ quality?...</p>
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bookingkit.join.com/jobs/270974-internship-business-development-m-f-d'>Job @ bookingkit (Berlin): Internship Business Dev... | JOIN</a></h5> 
+<h5><a href='https://bookingkit.join.com/jobs/270974-internship-business-development-m-f-d'>Job @ bookingkit (Berlin): Internship Business Dev... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -465,15 +474,7 @@ quality?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='https://luxasia.workable.com/j/B2A2E4A838'>Luxasia - Jobs: E-commerce Internship - Apply online</a></h5> 
-<p><span class="badge badge-light">Singapore</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://luxasia.workable.com/j/D0216D477A'>Luxasia - Jobs: Business Project Intern - Apply online</a></h5> 
-<p><span class="badge badge-light">Singapore</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
